--- a/Match-App/templates/base.html.twig
+++ b/Match-App/templates/base.html.twig
@@ -13,10 +13,15 @@
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
             <!-- Base CSS with version parameter -->
             <link rel="stylesheet" href="{{ asset('css/base.css') }}?v={{ 'now'|date('YmdHi') }}">
+            <!-- Popup CSS -->
+            <link rel="stylesheet" href="{{ asset('css/popup.css') }}?v={{ 'now'|date('YmdHi') }}">
         {% endblock %}
         {% block javascripts %}
             <!-- Bootstrap JS Bundle -->
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+            
+            <!-- Popup JS -->
+            <script src="{{ asset('js/popup.js') }}?v={{ 'now'|date('YmdHi') }}"></script>
             
             <!-- Global resource management -->
             <script>
