--- a/Match-App/templates/login/login.html.twig
+++ b/Match-App/templates/login/login.html.twig
@@ -5,6 +5,14 @@
 {% block body %}
     <h1>Connexion</h1>
 
+    {% for label, messages in app.flashes %}
+        {% for message in messages %}
+            <div class="alert alert-{{ label }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endfor %}
+
     {{ form_start(form) }}
         {{ form_row(form.email) }}
         {{ form_row(form.password) }}
