--- a/Match-App/templates/home/home.html.twig
+++ b/Match-App/templates/home/home.html.twig
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block body %}
-    <div class="home-page"> <!-- Ajout d'un conteneur spécifique -->
+    <div class="home-page">
         <div class="container mt-4 mb-5">
             <div class="welcome-header">
                 <div class="row align-items-center">
